--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">20077 Centerstage FIRST Scorer</string>
+    <string name="app_name">FTC Scorer - By 20077</string>
 </resources>
